[tool.poetry]
name = "voiceflow-eleventlab"
version = "0.1.0"
description = ""
authors = ["yukiwith5267 <yukiwith5267@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
openai = "^0.28"
elevenlabs = "^1.1.2"
pyaudio = "^0.2.14"
faster-whisper = "^1.0.1"
torch = "^2.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
